Now RES "show subreddit style" is displayed all the time in order to fix the bug where subscribers count text overlapped the h1 text

--- a/web_design.css
+++ b/web_design.css
@@ -1250,6 +1250,10 @@
 
 								.RESUserTagImage:hover {opacity: 1 !important;}
 
+							form.res-sr-style-toggle {
+								display: block;
+							}
+
 
 						/* Comment / Share / Report */
 						.link .flat-list {margin-top: 3px;}
